// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeroImage> renders  HeroImage with an image 1`] = `
<div
  className="Van-HeroImage"
>
  <div
    className="Van-HeroImage-content"
    style={
      Object {
        "backgroundImage": "url(my-image-path)",
      }
    }
  />
</div>
`;

exports[`<HeroImage> renders HeroImage without an image 1`] = `
<div
  className="Van-HeroImage"
>
  <div
    className="Van-HeroImage-content"
    style={
      Object {
        "backgroundImage": "url()",
      }
    }
  />
</div>
`;

exports[`<HeroImage> renders with specific attributes 1`] = `
<div
  className="Van-HeroImage"
  data-id="0"
>
  <div
    className="Van-HeroImage-content"
    style={
      Object {
        "backgroundImage": "url()",
      }
    }
  />
</div>
`;

exports[`<HeroImage> renders with specific className 1`] = `
<div
  className="Van-HeroImage my-class"
>
  <div
    className="Van-HeroImage-content"
    style={
      Object {
        "backgroundImage": "url()",
      }
    }
  />
</div>
`;
